--- a/gui_docker/Dockerfile
+++ b/gui_docker/Dockerfile
@@ -1,54 +1,36 @@
-FROM nvcr.io/nvidia/cuda:10.1-cudnn7-devel-ubuntu18.04
+# 기반 이미지를 선택합니다.
+FROM nvcr.io/nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
 
-# nvidia-container-runtime 
+# nvidia-container-runtime
 ENV NVIDIA_VISIBLE_DEVICES \
-    ${NVIDIA_VISIBLE_DEVICES:-all} 
+    ${NVIDIA_VISIBLE_DEVICES:-all}
 ENV NVIDIA_DRIVER_CAPABILITIES \
-    ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}graphics 
+    ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}graphics
 
-# USER root 
-
-# Set the timezone
-# ENV TZ Etc/UTC
-# RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
-# Install packages
-RUN apt-get update && apt-get install -q -y --no-install-recommends \
-    dirmngr \
-    gnupg2 \
-    lsb-release \
-    software-properties-common \
-    && rm -rf /var/lib/apt/lists/*
-
-# Setup ROS 2 dependencies
-ENV ROS_DISTRO dashing
-
-# Prevent console from interacting with the user
-# ARG DEBIAN_FRONTEND=noninteractive
-
-# Prevent hash mismatch error for apt-get update
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* && apt-get update -yqqq
 
-# Set folder for RUNTIME_DIR
+# 환경 변수를 설정합니다.
+ENV ROS_DISTRO=humble
+
 RUN mkdir tmp/runtime-root && chmod 0700 tmp/runtime-root
 ENV XDG_RUNTIME_DIR='/tmp/runtime-root'
 
-# Install non-Python/ROS dependencies
 RUN apt-get install --no-install-recommends -yqqq \
     python3-pip
 
-# Copy and chmod install_dev_tools.sh
 COPY install_dev_tools.sh /tmp/install_dev_tools.sh
 RUN chmod +x /tmp/install_dev_tools.sh
 
-# Set ROS2 environment variables in /root/.bashrc
-RUN echo "source /opt/ros/dashing/setup.bash" >> /root/.bashrc && \
+# 필요한 패키지를 설치합니다.
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+RUN echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> /root/.bashrc && \
     echo "export ROS_DOMAIN_ID=34" >> /root/.bashrc && \
     echo "export ROS_LOCALHOST_ONLY=1" >> /root/.bashrc && \
-    echo "echo 'ROS2 environment set, Domain = 34'" >> /root/.bashrc
-
-# Set ROS2 dashing and ROS aliases in /root/.bashrc
-RUN echo "source /opt/ros/dashing/setup.bash" >> /root/.bashrc && \
+    echo "echo 'ROS2 environment set, Domain = 34'" >> /root/.bashrc && \
+    echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> /root/.bashrc && \
     echo "source ~/catkin_ws/install/local_setup.bash" >> /root/.bashrc && \
     echo "alias cw='cd ~/catkin_ws'" >> /root/.bashrc && \
     echo "alias cs='cd ~/catkin_ws/src'" >> /root/.bashrc && \
@@ -62,33 +44,36 @@ RUN echo "source /opt/ros/dashing/setup.bash" >> /root/.bashrc && \
     echo "alias testpub='ros2 run demo_nodes_cpp talker'" >> /root/.bashrc && \
     echo "alias testsub='ros2 run demo_nodes_cpp listener'" >> /root/.bashrc
 
-# ROS Installation
-# setup timezone
 RUN echo 'Etc/UTC' > /etc/timezone && \
     ln -s /usr/share/zoneinfo/Etc/UTC /etc/localtime && \
     apt-get update && \
     apt-get install -q -y --no-install-recommends tzdata && \
     rm -rf /var/lib/apt/lists/*
 
-# install packages
 RUN apt-get update && apt-get install -q -y --no-install-recommends \
     dirmngr \
     gnupg2 \
     && rm -rf /var/lib/apt/lists/*
-
 # setup keys
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 4B63CF8FDE49746E98FA01DDAD19BAB3CBF125EA
+
+RUN gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654" && \
+    mkdir -p /usr/share/keyrings && \
+    gpg --batch --export "C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654" > /usr/share/keyrings/ros2-latest-archive-keyring.gpg && \
+    gpgconf --kill all && \
+    rm -rf "/tmp/tmp.CQJbidElIm"
 
 # setup sources.list
-RUN echo "deb http://snapshots.ros.org/dashing/final/ubuntu bionic main" > /etc/apt/sources.list.d/ros2-snapshots.list
+RUN echo "deb [ signed-by=/usr/share/keyrings/ros2-latest-archive-keyring.gpg ] http://packages.ros.org/ros2/ubuntu jammy main" > /etc/apt/sources.list.d/ros2-latest.list
 
 # setup environment
 ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
 
+ENV ROS_DISTRO humble
+
 # install ros2 packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    ros-dashing-ros-core=0.7.4-1* \
+    ros-humble-ros-core=0.10.0-1* \
     && rm -rf /var/lib/apt/lists/*
 
 # setup entrypoint
@@ -110,7 +95,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 
 # bootstrap rosdep
 RUN rosdep init && \
-  rosdep update --rosdistro $ROS_DISTRO
+  rosdep update --rosdistro humble
 
 # setup colcon mixin and metadata
 RUN colcon mixin add default \
@@ -122,10 +107,15 @@ RUN colcon mixin add default \
 
 # install ros2 packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    ros-dashing-ros-base=0.7.4-1* \
+    ros-humble-ros-base=0.10.0-1* \
     && rm -rf /var/lib/apt/lists/*
 
 # install ros2 packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    ros-dashing-desktop=0.7.4-1* \
+    ros-humble-desktop=0.10.0-1* \
+    && rm -rf /var/lib/apt/lists/*
+
+# install ros2 packages
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ros-humble-desktop-full=0.10.0-1* \
     && rm -rf /var/lib/apt/lists/*
